--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello  worl</p>
+    <p>hello </p>
 </body>
+<script src="js/script.js"></script>
 </html>
